--- a/frontend.html
+++ b/frontend.html
@@ -45,5 +45,20 @@
                 <div class="varying-row">Buttons</div>
             </div>
         </div>
-    </body>
+        <!-- Left Side of Second Page -->
+         <div id="Left Side Page Two">
+                 
+                             <!-- Scroll through your Requests -->
+                <div class="Your Donors">
+                    <!-- TODO: Scroll through each potential donor -->
+                </div>
+         </div>
+        <!-- Right Side of Second Page -->
+        <div id="Right Side Page Two">
+                             <!-- Scroll through other people's Requests -->
+                <div class="Your recipients">
+                    <!-- TODO: Scroll through each potential recipient -->
+                </div>
+         </div>
+    </body>    
 </html>
